added like icons

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MB News</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -89,14 +92,14 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
                     </div>
 
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
                     </div>
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-share"></i>
                     </div>
                     <div>
                         &#9733;
@@ -153,11 +156,11 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
                     </div>
 
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
                     </div>
                     <div>
                         &#9733;
@@ -217,11 +220,11 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
                     </div>
 
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
                     </div>
                     <div>
                         &#9733;
@@ -296,11 +299,11 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
                     </div>
 
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
                     </div>
                     <div>
                         &#9733;
@@ -351,11 +354,11 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
                     </div>
 
                     <div>
-                        &#9733;
+                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
                     </div>
                     <div>
                         &#9733;
