added likes functionality

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 </li>
                 <li>
                     Live T.V
+                    <span>
+                        <img src="images/image.png" alt="" class="live">
+                    </span>
                 </li>
                 <li>
                     Search
@@ -50,7 +53,7 @@
             <div class="sidenav-list-container">
                 <ul>
                     <li>
-                        Live TV
+                        Movies
                     </li>
                     <li>
                         World
@@ -74,7 +77,7 @@
                         Magazine
                     </li>
                     <li class="min-width-display">
-                        Live T.V
+                        Live T.V <span><img src="images/image.png" alt="" class="live"></span>
                     </li>
                     <li class="min-width-display">
                         Search
@@ -83,6 +86,18 @@
             </div>
         </div>
     </nav>
+    <div class="top-stories">
+        <div class="top-stories-label">
+            TOP STORIES
+        </div>
+        <marquee behavior="" scrollamount="15" direction="right">
+            <div class="scroller">
+                <span class="scroller-items">PayPal</span><span class="scroller-items">Bitcoin</span><span
+                    class="scroller-items">Miners</span><span class="scroller-items">Eisenberg arrested</span><span
+                    class="scroller-items">Microstrategy</span>
+            </div>
+        </marquee>
+    </div>
     <div class="news-container">
         <h3 class="news-heading">
             PayPal enables transfer of digital currencies to external wallets
@@ -92,14 +107,16 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
-                    </div>
 
-                    <div>
-                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
+                        <img src="images/thumbsup.png" alt="" style="width:20px;height:20px;filter: grayscale(100%);"
+                            onclick="thumbsup('upXLGj')" id="upXLGj">
                     </div>
                     <div>
-                        <i class="fa-solid fa-share"></i>
+                        <img src="images/thumbsdown.png" alt="" style="width:20px;height:20px ;filter: grayscale(100%);"
+                            id="doXLGj" onclick="thumbsdown('doXLGj')">
+                    </div>
+                    <div>
+                        <img src="images/share.png" alt="" style="width:30px;height:26px;">
                     </div>
                     <div>
                         &#9733;
@@ -117,11 +134,16 @@
                 assets between PayPal and other <a href="#" class="middle-link">wallets and exchanges</a>
                 wallets and exchanges. As of Tuesday, the feature
                 is available to select U.S. users, with the feature expanding to all eligible U.S. users in
-                the coming weeks. The first batch of supported coins consists of Bitcoin
+                the coming weeks.
+
             </p>
             <p>
-                BTC $16,704, Ether ETH $1,217, Bitcoin Cash <span class="money">BCH $100</span>, and Litecoin LTC
-                $74.58.
+                The first batch of supported coins consists of Bitcoin
+
+                <a href="#" class="money"><span class="money-unit">BTC</span>$16,704</a>, Ether <a href="#"
+                    class="money"><span class="money-unit">ETH</span>$1,217</a>, Bitcoin Cash <a href="#"
+                    class="money"><span class="money-unit">BCH</span>$100</a>, and
+                Litecoin <a href="#" class="money"><span class="money-unit">LTC</span>$74.58</a>
                 In addition, customers who transfer their crypto onto PayPal can spend it via
                 Checkout at millions of merchant terminals. The company has been granted a full
                 Bitlicense by the New York Department of Financial Services for the conduct.
@@ -156,14 +178,16 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
-                    </div>
 
-                    <div>
-                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
+                        <img src="images/thumbsup.png" alt="" style="width:20px;height:20px;filter: grayscale(100%);"
+                            onclick="thumbsup('upVD5g')" id="upVD5g">
                     </div>
                     <div>
-                        &#9733;
+                        <img src="images/thumbsdown.png" alt="" style="width:20px;height:20px ;filter: grayscale(100%);"
+                            id="doVD5g" onclick="thumbsdown('doVD5g')">
+                    </div>
+                    <div>
+                        <img src="images/share.png" alt="" style="width:30px;height:26px;">
                     </div>
                     <div>
                         &#9733;
@@ -181,18 +205,21 @@
                 Italian Prime Minister Giorgia Meloni's 2023 expansionary budget – which was
                 completed in a rush before the end of the year – features 21 billion euros ($22.3
                 billion) in tax breaks to assist businesses and households facing the energy crisis,
-                Reuters reported.
+                Reuters <a href="#" class="middle-link">reported</a>.
             </p>
             <p>
-                In Italy, where crypto remains largely unregulated, the 387-page budget legitimizes
+                In Italy, where crypto <a href="#" class="middle-link">remains largerly unregulated</a>, the 387-page
+                budget
+                legitimizes
                 crypto assets by defining them as "a digital representation of value or rights, which
                 can be transferred and stored electronically, using the technology of distributed
                 ledger or similar technology."
             </p>
             <p>
-                Italy's (and most recently Portugal's) move to introduce a capital-gains tax on crypto
-                comes ahead of the implementation of the European Union's Markets in Crypto
-                Assets (MiCA) regulation that promises a licensing frameworks and stringent
+                Italy's (and most recently <a href="#" class="middle-link">Portugal's</a>) move to introduce
+                a capital-gains tax on crypto
+                comes ahead of the implementation of the European Union's <a href="#" class="middle-link">Market's in
+                    Crypto Assets (MiCA)</a> regulation that promises a licensing frameworks and stringent
                 operating requirements for crypto-service providers in the 27-member bloc.
             </p>
             <p>
@@ -220,14 +247,16 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
-                    </div>
 
-                    <div>
-                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
+                        <img src="images/thumbsup.png" alt="" style="width:20px;height:20px;filter: grayscale(100%);"
+                            onclick="thumbsup('upn2H1')" id="upn2H1">
                     </div>
                     <div>
-                        &#9733;
+                        <img src="images/thumbsdown.png" alt="" style="width:20px;height:20px ;filter: grayscale(100%);"
+                            id="don2H1" onclick="thumbsdown('don2H1')">
+                    </div>
+                    <div>
+                        <img src="images/share.png" alt="" style="width:30px;height:26px;">
                     </div>
                     <div>
                         &#9733;
@@ -252,13 +281,15 @@
                 of ~$30,397 per bitcoin.
             </p>
             <p>
-                In its filing with the U.S. Securities and Exchange Commission (SEC), Microstrategy
+                In its <a href="#" class="middle-link">filing</a> with the U.S. Securities and Exchange
+                Commission (SEC), Microstrategy
                 clarified that the 2,500 coins were acquired between Nov. 1 and Dec. 24 by its wholly
                 owned subsidiary Macrostrategy.
             </p>
             <p>
                 The bitcoin sale in December marked the first time Microstrategy sold its bitcoin
-                since it began accumulating the crypto for its corporate treasury in 2020. The
+                since it began <a href="#" class="middle-link">accumulating</a> the crypto for its corporate
+                treasury in 2020. The
                 company cited tax reasons for selling BTC. “Microstrategy plans to carry back the
                 capital losses resulting from this transaction against previous capital gains, to the
                 extent such carrybacks are available The subsidiary bought approximately 2,395 BTC
@@ -272,18 +303,21 @@
                 benefit,” the SEC filing describes.
             </p>
             <p>
-                Saylor said in an interview last week:
+                Saylor said in an <a href="#" class="middle-link">interview</a> last week:
+                <br>
                 The most positive thing of the year is the emergence of bitcoin as the institutional
                 grade digital asset and the clarity that … there is one crypto asset that’s a digital
                 commodity … Bitcoin is that commodity.
             </p>
             <p>
-                The executive noted that both the chairman of the SEC and the chair of the
-                Commodity Futures Trading Commission (CFTC) have confirmed that bitcoin is a
-                commodity.
+                The executive noted that both the <a href="#" class="middle-link">Chairman of the SEC</a> and the
+                chair of the
+                Commodity Futures Trading Commission (CFTC) have confirmed that <a href="#" class="middle-link">bitcoin
+                    is a commodity</a>
             </p>
             <p>
-                Saylor previously explained that Microstrategy is investing in BTC “for the long term.”
+                Saylor previously <a href="#" class="middle-link">explained</a> that Microstrategy is investing in BTC
+                “for the long term.”
                 He added: “Our strategy is to buy bitcoin and hold the bitcoin, so there’s no price
                 target … I expect bitcoin is going to go into the millions. So, we’re very patient. We
                 think it’s the future of money.”
@@ -299,14 +333,16 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
-                    </div>
 
-                    <div>
-                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
+                        <img src="images/thumbsup.png" alt="" style="width:20px;height:20px;filter: grayscale(100%);"
+                            onclick="thumbsup('upDECH')" id="upDECH">
                     </div>
                     <div>
-                        &#9733;
+                        <img src="images/thumbsdown.png" alt="" style="width:20px;height:20px ;filter: grayscale(100%);"
+                            id="doDECH" onclick="thumbsdown('doDECH')">
+                    </div>
+                    <div>
+                        <img src="images/share.png" alt="" style="width:30px;height:26px;">
                     </div>
                     <div>
                         &#9733;
@@ -354,14 +390,16 @@
                 <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
                 <div class="likes-section">
                     <div>
-                        <i class="fa-solid fa-thumbs-up" id="bitcup" onclick="thumbs('bitcup')"></i>
-                    </div>
 
-                    <div>
-                        <i class="fa-solid fa-thumbs-down" id="bitcdown" onclick="thumbs('bitcdown')"></i>
+                        <img src="images/thumbsup.png" alt="" style="width:20px;height:20px;filter: grayscale(100%);"
+                            onclick="thumbsup('upmj2q')" id="upmj2q">
                     </div>
                     <div>
-                        &#9733;
+                        <img src="images/thumbsdown.png" alt="" style="width:20px;height:20px ;filter: grayscale(100%);"
+                            id="domj2q" onclick="thumbsdown('domj2q')">
+                    </div>
+                    <div>
+                        <img src="images/share.png" alt="" style="width:30px;height:26px;">
                     </div>
                     <div>
                         &#9733;
@@ -373,19 +411,22 @@
                 The investor drained $110 million in cryptocurrencies from the platform.
             </h4>
             <p>
-                Avraham Eisenberg, the crypto investor whose “highly profitable trading strategy”
+                Avraham Eisenberg, the crypto investor whose <a href="#" class="middle-link">“highly profitable trading
+                    strategy”</a>
                 drained DeFi trading platform Mango Markets of crypto worth $110 million, was
                 arrested Monday in Puerto Rico, court documents said.
             </p>
             <p>
                 The self-described game theorist admitted his role in draining Mango Markets’
                 treasury shortly after the incident in mid-October, and may now be the first U.S.
-                resident to face charges for his role in manipulating a decentralized-finance trading
+                resident to face charges for his role in manipulating a <a href="#"
+                    class="middle-link">decentralized-finance</a> trading
                 platform.
             </p>
             <p>
                 Eisenberg faces charges of commodities fraud and commodities manipulation,
-                according to a filing unsealed Tuesday. The charges could see punishments ranging
+                according to <a href="#" class="middle-link">a filing unsealed Tuesday</a>. The charges could see
+                punishments ranging
                 from fines to prison time.
             </p>
             <p>
