--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <marquee behavior="" scrollamount="15" direction="right">
             <div class="scroller">
                 <span class="scroller-items"><a class="scroll-link" href="#paypal">PayPal</a></span><span
-                    class="scroller-items"><a href="#Bitcoin" class="scroll-link">Bitcoin</a></span><span
+                    class="scroller-items"><a href="#italy" class="scroll-link">Crypto-Gains</a></span><span
                     class="scroller-items"><a href="#Miners" class="scroll-link">Miners</a></span><span
                     class="scroller-items"><a href="#Eisenberg arrested" class="scroll-link">Eisenberg
                         arrested</a></span><span class="scroller-items"><a class="scroll-link"
@@ -190,7 +190,7 @@
             </p>
         </div>
     </div>
-    <div class="news-container" id="Bitcoin">
+    <div class="news-container" id="italy">
         <h3 class="news-heading">
             Italian Parliament Approves 26% Crypto-Gains Tax in 2023 Budget
         </h3>
@@ -266,7 +266,7 @@
             </p>
         </div>
     </div>
-    <div class="news-container" id="Miners">
+    <div class="news-container" id="Microstrategy">
         <h3 class="news-heading">
             Microstrategy Buys More Bitcoin — Company's Crypto Holdings Grow to 132,500
             BTC
@@ -364,7 +364,7 @@
             </p>
         </div>
     </div>
-    <div class="news-container" id="Eisenberg arrested">
+    <div class="news-container" id="Miners">
         <h3 class="news-heading">
             Bitcoin Miners’ Revenue Hits $9.55 Billion in 2022
         </h3>
@@ -421,7 +421,7 @@
         </div>
 
     </div>
-    <div class="news-container" id="Microstrategy">
+    <div class="news-container" id="Eisenberg arrested">
         <h3 class="news-heading">
             Mango Markets Exploiter Eisenberg Arrested in Puerto Rico
         </h3>
