--- a/index.html
+++ b/index.html
@@ -59,25 +59,29 @@
             <div class="sidenav-list-container">
                 <ul>
                     <li>
-                        Movies
+                        <a href='http://www.google.com/search?q=Movies'>Movies</a>
                     </li>
                     <li>
-                        World
+                        <a href='http://www.google.com/search?q=World'>World</a>
                     </li>
                     <li>
-                        Technology
+                        <a href='http://www.google.com/search?q=Technology'>Technology</a>
+
                     </li>
                     <li>
-                        LifeStyle
+                        <a href='http://www.google.com/search?q=LifeStyle'>LifeStyle</a>
+
                     </li>
                     <li>
-                        Education
+                        <a href='http://www.google.com/search?q=Education'>Education</a>
+
                     </li>
                     <li>
-                        Cinema
+                        <a href='http://www.google.com/search?q=Cinema'>Cinema</a>
+
                     </li>
                     <li>
-                        Crypto
+                        <a href='http://www.google.com/search?q=Crypto'>Crypto</a>
                     </li>
                     <li class="min-width-display">
                         <a style="text-decoration:none;color:white"
@@ -121,7 +125,7 @@
         </h3>
         <div class="news-information">
             <div class="right-section">
-                <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
+                <img src="images/paypal.png" alt="paypal-image" class="news-information-image">
                 <div class="likes-section">
                     <div>
 
@@ -196,7 +200,7 @@
         </h3>
         <div class="news-information">
             <div class="right-section">
-                <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
+                <img src="images/second.png" alt="italyImage" class="news-information-image">
                 <div class="likes-section">
                     <div>
 
@@ -273,7 +277,7 @@
         </h3>
         <div class="news-information">
             <div class="right-section">
-                <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
+                <img src="images/microstrategy.png" alt="MicrostrategyImage" class="news-information-image">
                 <div class="likes-section">
                     <div>
 
@@ -370,7 +374,7 @@
         </h3>
         <div class="news-information">
             <div class="right-section">
-                <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
+                <img src="images/mining.png" alt="MiningImage" class="news-information-image">
                 <div class="likes-section">
                     <div>
 
@@ -427,7 +431,7 @@
         </h3>
         <div class="news-information">
             <div class="right-section">
-                <img src="images/bitcoin.png" alt="bitcoinimage" class="news-information-image">
+                <img src="images/arrested.png" alt="meme" class="news-information-image">
                 <div class="likes-section">
                     <div>
 
