added fixed side navigation bar

--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             </div>
             <div class="sidenav-list-container">
                 <ul>
+                    <li class="quick-navigation">
+                        Quick Navigation
+                    </li>
                     <li>
                         <a href='http://www.google.com/search?q=Movies'>Movies</a>
                     </li>
@@ -492,6 +495,7 @@
             </p>
         </div>
     </div>
+    <a href="#burger-checkbox" class="top">Back To Top</a>
 
     <script src="js/index.js"></script>
 
